# dreamsim

./: .gitignore  demo.py  pyproject.toml
dataset/: dataset.py
dreamsim/: __init__.py  config.py  model.py
dreamsim/feature_extraction/: extractor.py  load_clip_as_dino.py  load_mae_as_vit.py  load_open_clip_as_dino.py  vision_transformer.py  vit_wrapper.py
training/: evaluate.py  train.py
util/: utils.py
