[project]
name = "dreamsim"
version = "0.1.3"
authors = [
  { name = "Stephanie Fu" },
  { name = "Netanel Tamir" },
  { name = "Shobhita Sundaram" },
  { name = "Lucy Chai" },
  { name = "Richard Zhang" },
  { name = "Tali Dekel" },
  { name = "Phillip Isola" },
]
maintainers = [
  { name = "Andi Powers-Holmes", email = "aholmes@omnom.net" },
]
description = "DreamSim similarity metric"
readme = "README.md"
requires-python = ">=3.9, <3.11"
keywords = [
  "deep-learning",
  "machine-learning",
  "pytorch",
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "configargparse",
  "lightning",
  "numpy",
  "open-clip-torch",
  "pandas",
  "peft @ git+https://github.com/neggles/peft.git@legacy#egg=peft",
  "Pillow",
  "PyYAML",
  "scipy",
  "timm",
  "torch",
  "torchmetrics",
  "torchvision",
  "transformers",
]

[project.urls]
Repository = "https://github.com/neggles/dreamsim"

[project.optional-dependencies]
dev = [
  "ruff >=0.0.289",
  "setuptools-scm >= 8.0.0",
  "pre-commit >= 3.0.0",     # remember to run `pre-commit install` after installing
  "tabulate >= 0.8.9",       # for inductor log prettyprinting
]
extra = [
  "dists-pytorch",
  "lpips",
]
all = [
  "dreamsim[dev]",
  "dreamsim[extra]",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel"]

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
include = ["dreamsim"]


[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["/usr/lib/*"]

[tool.ruff.lint]
ignore = [
  "F841", # local variable assigned but never used
  "F842", # local variable annotated but never used
  "E501", # line too long - will be fixed in format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
exclude = [
  "src/neurosis/_version.py", # generated by setuptools_scm
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["dreamsim"]
known-first-party = ["dreamsim"]


[tool.pyright]
include = ["src/**"]
exclude = ["/usr/lib/**"]
stubPath = "./typings"
